--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<title>Home</title>
-	
+	<link href='https://fonts.googleapis.com/css?family=PT+Sans|Open+Sans' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="{% static 'build/css/dashboard.css' %}">
 
 	<!-- Compiled and minified CSS -->
@@ -30,13 +30,14 @@
 		</div>
   	</nav>
 
-  	<div class="row moduleRow">
-		<div class="col s12 m6 moduleContainer orange">
+  	<div class="moduleContainer">
+  		<div class="row moduleRow">
+		<div class="col s12 m6 module orange">
 			<div id="assetBreakMod">
 				
 			</div>
 		</div>
-		<div class="col s12 m6 moduleContainer green">
+		<div class="col s12 m6 module green">
 			<div id="returnPerYearMod">
 				
 			</div>
@@ -44,17 +45,18 @@
 	</div>
 
 	<div class="row moduleRow">
-		<div class="col s12 m6 moduleContainer purple">
-			<div id="riskMod">
+		<div class="col s12 m6 module purple">
 				
+			<div class="row">
+				<div id="riskMod"></div>
 			</div>
 			
 		</div>
-		<div class="col s12 m6 moduleContainer blue">
+		<div class="col s12 m6 module blue">
 			
 		</div>
 	</div>
-        
+  	</div>
 
 </body>
 
