--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -47,19 +47,17 @@
 	<div class="row moduleRow">
 		<div class="col s12 m6 module purple">
 				
-			<div class="row">
-				<div id="riskMod"></div>
-			</div>
+			<div id="riskMod"></div>
 			
 		</div>
 		<div class="col s12 m6 module blue">
-			
+			<div id="feeMod"></div>
 		</div>
 	</div>
   	</div>
 
 </body>
-
+<script src="{% static 'build/js/fees.js' %}"></script>
 <script src="{% static 'build/js/bar.js' %}"></script>
 <script src="{% static 'build/js/pie.js' %}"></script>
 <script src="{% static 'build/js/risk.js' %}"></script>
