--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -14,6 +14,7 @@
 	<script src="http://code.highcharts.com/highcharts-more.js"></script>
    	<script src="http://code.highcharts.com/modules/solid-gauge.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+	<script src="http://rawgit.com/virtualstaticvoid/highcharts_trendline/master/regression.js"> </script>
 
 </head>
 <body>
@@ -21,10 +22,11 @@
 	<nav>
 	    <div class="nav-wrapper vestBar">
       		<a href="#" class="brand-logo center">Vestivise</a>
-			<ul id="nav-mobile" class="left hide-on-med-and-down">
+			<ul style="margin-left : 40px" id="nav-mobile" class="left hide-on-med-and-down">
 				<li><a href="collapsible.html">Settings</a></li>
+				<li><a href="collapsible.html">Edit Modules</a></li>
 			</ul>
-			<ul id="nav-mobile" class="right hide-on-med-and-down">
+			<ul style="margin-right : 40px" id="nav-mobile" class="right hide-on-med-and-down">
 				<li><a href="collapsible.html">Logout</a></li>
 			</ul>
 		</div>
