--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -14,19 +14,19 @@
 	<script src="http://code.highcharts.com/highcharts-more.js"></script>
    	<script src="http://code.highcharts.com/modules/solid-gauge.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
-	<script src="http://rawgit.com/virtualstaticvoid/highcharts_trendline/master/regression.js"> </script>
 
 </head>
 <body>
 
 	<nav>
 	    <div class="nav-wrapper vestBar">
-      		<a href="#" class="brand-logo center">Vestivise</a>
+      		<a href="#" class="brand-logo center"><img height="63" width="230" src="{% static 'media/logo.jpg' %}" alt=""></a>
 			<ul style="margin-left : 40px" id="nav-mobile" class="left hide-on-med-and-down">
-				<li><a href="collapsible.html">Settings</a></li>
+				<li><a href="collapsible.html">Viewing Options</a></li>
 				<li><a href="collapsible.html">Edit Modules</a></li>
 			</ul>
 			<ul style="margin-right : 40px" id="nav-mobile" class="right hide-on-med-and-down">
+				<li><a href="collapsible.html">Accounts</a></li>
 				<li><a href="collapsible.html">Logout</a></li>
 			</ul>
 		</div>
