--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -20,7 +20,7 @@
 
 	<nav>
 	    <div class="nav-wrapper vestBar">
-      		<a href="#" class="brand-logo center"><img height="63" width="230" src="{% static 'media/logo.jpg' %}" alt=""></a>
+      		<a href="#" class="brand-logo center"><img height="100%" width="230" src="{% static 'media/logo.jpg' %}" alt=""></a>
 			<ul style="margin-left : 40px" id="nav-mobile" class="left hide-on-med-and-down">
 				<li><a href="collapsible.html">Viewing Options</a></li>
 				<li><a href="collapsible.html">Edit Modules</a></li>
