--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -46,7 +46,7 @@
 		</div>
 		<div class="col s12 m6 module green">
 			<div id="returnPerYearMod"></div>
-			<p class="modTitle R">Return</p>
+			<p class="modTitle R">Returns</p>
 			<div class="fullScreen BL">
     			<div class="fullScreen innerBL"></div>
 			</div>
@@ -57,7 +57,7 @@
 		<div class="col s12 m6 module purple">
 				
 			<div id="riskMod"></div>
-			<p class="modTitle L">Risk</p>
+			<p class="modTitle L">Risks</p>
 			<div class="fullScreen TR">
     			<div class="fullScreen innerTR"></div>
 			</div>
