--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -10,7 +10,6 @@
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
   	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="{% static 'bower_components/mdi/css/materialdesignicons.min.css' %}" media="all" rel="stylesheet" type="text/css" />
-
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 	<script src="http://code.highcharts.com/highcharts.js"></script>
 	<script src="http://code.highcharts.com/highcharts-more.js"></script>
@@ -37,8 +36,19 @@
   	<div class="moduleContainer">
   		<div class="row moduleRow">
 		<div class="col s12 m6 module orange">
-
+			
 			<div id="orangeContent">
+				<div class="fixed-action-btn" style="position: absolute; display: inline-block; right: 24px; top: 0px">
+				    <a class="btn-floating red waves-effect">
+				      <i class="large material-icons">replay</i>
+				    </a>
+				    <ul>
+				      <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
+				      <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+				      
+				    </ul>
+				</div>
+
 				<div id="assetBreakMod"></div>
 				<p class="modTitle L">Assets</p>
 				<div class="fullScreen BR">
@@ -94,17 +104,6 @@
 			$('#blueContent').hide();
 			$('#purpleContent').hide();
 			$('#greenContent').hide();
-
-			// $('.module.purple').animate({
-			// 	height: "0px",
-			// 	marginTop : "100%"
-			// }, 5000);
-
-			// $('.module.blue').animate({
-			// 	width: "0px",
-			// 	left: "100%",
-			// 	height: "0px",
-			// }, 5000, 'swing');
 
 			$('.module.green').hide();
 			$("body").css("background-color","#FF9800");
