--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<title>Home</title>
-	<link href='https://fonts.googleapis.com/css?family=Open+Sans|Roboto' rel='stylesheet' type='text/css'>	
+	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="{% static 'build/css/dashboard.css' %}">
 
 	<!-- Compiled and minified CSS -->
@@ -38,15 +38,17 @@
 		<div class="col s12 m6 module orange">
 			
 			<div id="orangeContent">
+
+				<div id="toggleChart" class="fixed-action-btn">
+				    <a style="display: none;" id="toggleChartBtn" class="btn-floating blue waves-effect">
+				      <i class="large material-icons">insert_chart</i>
+				    </a>
+				</div>
+
 				<div class="fixed-action-btn" style="position: absolute; display: inline-block; right: 24px; top: 0px">
-				    <a class="btn-floating red waves-effect">
+				    <a id="toggleMod" class="btn-floating red waves-effect">
 				      <i class="large material-icons">replay</i>
 				    </a>
-				    <ul>
-				      <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
-				      <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
-				      
-				    </ul>
 				</div>
 
 				<div id="assetBreakMod"></div>
@@ -95,6 +97,7 @@
 <script src="{% static 'build/js/bar.js' %}"></script>
 <script src="{% static 'build/js/pie.js' %}"></script>
 <script src="{% static 'build/js/risk.js' %}"></script>
+<script src="{% static 'build/js/sectionPie.js' %}"></script>
 
 <script>
  	var hidden = false;
@@ -146,7 +149,42 @@
 		}
 		
 	});	
-	
+
+	var toggleVar = 0;
+
+	$('#toggleMod').click(function() {
+
+		if(toggleVar == 0){
+			$('#toggleChartBtn').show();
+			$('#assetBreakMod').highcharts().destroy();
+			$('#assetBreakMod').highcharts(sectorOpt);
+		}else{
+			$('#assetBreakMod').highcharts(assetOpt);
+			$('#toggleChartBtn').hide();
+		}
+
+		toggleVar = toggleVar == 0 ? 1 : 0;
+		
+	});
+
+	var dataToggle = 0;
+
+	$('#toggleChartBtn').click(function(){
+		var chart = $('#assetBreakMod').highcharts();
+		if(dataToggle == 0){
+			chart.setTitle({text: "Bond Sectors"});
+			chart.series[0].remove();
+			dataSeries[0].data = data2;
+			chart.addSeries(dataSeries[0]);
+		}else{
+			chart.setTitle({text: "Equity Sectors"});
+			chart.series[0].remove();
+			dataSeries[0].data = data1;
+			chart.addSeries(dataSeries[0]);
+		}
+		chart.redraw();
+		dataToggle = dataToggle == 0 ? 1 : 0;
+	});
 	
 
 </script>
