--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -93,6 +93,17 @@
   	</div>
 
 </body>
+
+<script>
+	Highcharts.setOptions({
+		chart: {
+        style: {
+            fontFamily: 'Raleway, sans-serif'
+        }
+    }
+	});
+</script>
+
 <script src="{% static 'build/js/fees.js' %}"></script>
 <script src="{% static 'build/js/bar.js' %}"></script>
 <script src="{% static 'build/js/pie.js' %}"></script>
