--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<title>Home</title>
-	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Raleway:400,700,800,900' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="{% static 'build/css/dashboard.css' %}">
 
 	<!-- Compiled and minified CSS -->
