--- a/templates/landingPage.html
+++ b/templates/landingPage.html
@@ -22,10 +22,13 @@
 	<section>
 		<div class="welcome">
 			<img id="welcome-header" src="{% static 'media/logo.jpg' %}">
-			<h2 id="welcome-tag"> Tag blah blha blah </h2>
+			<h2 id="welcome-tag"> Finally, a future you can own.  </h2>
 			<div id="triangle">
 			</div>
-			<p id="descriptionCompany">Brief description about company Brief description about companyBrief description about companyBrief description about companyBrief description about companyBrief description about companyBrief description about companyBrief description about companyBrief description about </p>
+			<p id="descriptionCompany">
+				Most people don’t reach their goals. We keep investment reporting simple, 
+				so in the good times and bad, we will be there to guide you.
+			</p>
 			<button id="getStarted" class="btn waves-effect waves-light">
 				Get Started
   			</button>
@@ -41,8 +44,11 @@
 						<img id='reportImg' src="{% static 'media/report.jpg' %}" alt="">
 					</div>
 					<div class="col m6">
-						<h1>Traditional Reports</h1>
-						<p>asjflksdajfklsd</p>
+						<h1>A Thing Of The Past</h1>
+						<p>
+							Investment companies are confusing you. You want essentials, not a page filled with numbers. You want to grasp the big picture, without having to know everything first. Traditional reports will be a thing of the past.
+
+						</p>
 					</div>
 				</div>
 			</div>
@@ -121,24 +127,65 @@
 			<div class="container">
 				<div class="row">
 					<div id="registerHeader" class="col m12">
-						<h1>Register</h1>				
+						<h1>Ready To Be One Of The Firsts?</h1>		
+						<p>We haven't launched yet, but we are admitting people into beta. We'd be happy to keep you posted on the beta launch!</p>	
+						<p>Questions? Send us a line! <a href="mailto:josh@vestivise.com"> Hi I'm Josh!</a></p>	
 					</div>					
 				</div>		
 				<div class="row">
 					<div class="input-field col m12">
-						<form >
+						<form id="submitEmail">
 							<i style="color:#F24258;" class="material-icons prefix">email</i>
 							<input id="first_name" type="email" class="validate">
 	          				<label for="Email">Email</label>	
 	          				<button class="btn waves-effect waves-light" type="submit" name="action">Submit
 	    						<i class="material-icons right">send</i>
-	  						</button>	
+	  						</button>
 						</form>
 					</div>			
 				</div>		
 			</div>
 		</div>
 	</section>
+
+	<!-- Modal Structure -->
+	<div id="modal1" class="modal">
+		<div class="modal-content">
+			<h4>Know anyone else?</h4>
+			<p>
+				Invite some friends! If at least one of them sign up you get the Insights 
+				(2 accounts, the additional insight modules) tier for free!
+			</p>
+			<div class="container">
+				<div class="row">
+					<div class="input-field col s12">
+                        <input type="text" class="validate">
+                        <label for="disabled">Email 1</label>
+                    </div>
+                    <div class="input-field col s12">
+                        <input type="text" class="validate">
+                        <label for="disabled">Email 2</label>
+                    </div>
+                    <div class="input-field col s12">
+                        <input type="text" class="validate">
+                        <label for="disabled">Email 3</label>
+                    </div>
+                    <div class="input-field col s12">
+                        <input type="text" class="validate">
+                        <label for="disabled">Email 4</label>
+                    </div>
+                    <div class="input-field col s12">
+                        <input type="text" class="validate">
+                        <label for="disabled">Email 5</label>
+                    </div>
+				</div>
+			</div>
+		</div>
+		<div class="modal-footer">
+			<a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Submit</a>
+			<a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">No Thanks!</a>
+		</div>
+	</div>
   	
 
 </body>
@@ -160,6 +207,12 @@
 <script src="{% static 'build/js/sectionPie.js' %}"></script>
 
 <script>
+
+	$('#submitEmail').on('submit', function(e){
+		e.preventDefault();
+		$('#modal1').openModal();
+	});
+
  	var hidden = false;
 	// $('.innerBR').click(function(){
 
