--- a/templates/landingPage.html
+++ b/templates/landingPage.html
@@ -26,7 +26,7 @@
 			<div id="triangle">
 			</div>
 			<p id="descriptionCompany">
-				Most people don’t reach their goals. We keep investment reporting simple, 
+				Most people don’t reach their goals. <br> We keep investment reporting simple, 
 				so in the good times and bad, we will be there to guide you.
 			</p>
 			<button id="getStarted" class="btn waves-effect waves-light">
@@ -40,15 +40,16 @@
 			<div class="container">
 				
 				<div class="row">
-					<div class="col m6">
+					<div style="text-align:center;" class="col m6">
 						<img id='reportImg' src="{% static 'media/report.jpg' %}" alt="">
 					</div>
-					<div class="col m6">
-						<h1>A Thing Of The Past</h1>
-						<p>
+					<div style="text-align: left;" class="col m6">
+						<h3>A Thing Of The Past</h3>
+						<div>
+							<p style="color: #ecf0f1; font-size: 28px;">
 							Investment companies are confusing you. You want essentials, not a page filled with numbers. You want to grasp the big picture, without having to know everything first. Traditional reports will be a thing of the past.
-
-						</p>
+							</p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -129,16 +130,16 @@
 					<div id="registerHeader" class="col m12">
 						<h1>Ready To Be One Of The Firsts?</h1>		
 						<p>We haven't launched yet, but we are admitting people into beta. We'd be happy to keep you posted on the beta launch!</p>	
-						<p>Questions? Send us a line! <a href="mailto:josh@vestivise.com"> Hi I'm Josh!</a></p>	
+						<a href="mailto:josh@vestivise.com">Questions? Send us a line!</a>	
 					</div>					
 				</div>		
 				<div class="row">
 					<div class="input-field col m12">
 						<form id="submitEmail">
 							<i style="color:#F24258;" class="material-icons prefix">email</i>
-							<input id="first_name" type="email" class="validate">
-	          				<label for="Email">Email</label>	
-	          				<button class="btn waves-effect waves-light" type="submit" name="action">Submit
+							<input name='email' id="email" type="email" class="validate">
+	          				<label for="email">Email</label>	
+	          				<button class="btn waves-effect waves-light" type="submit">Submit
 	    						<i class="material-icons right">send</i>
 	  						</button>
 						</form>
@@ -149,41 +150,35 @@
 	</section>
 
 	<!-- Modal Structure -->
-	<div id="modal1" class="modal">
+	<div id="modal1" class="modal modal-fixed-footer">
 		<div class="modal-content">
 			<h4>Know anyone else?</h4>
 			<p>
-				Invite some friends! If at least one of them sign up you get the Insights 
-				(2 accounts, the additional insight modules) tier for free!
+				Invite some friends! If at least one of them sign up you get the <span style="color: #2e8ece;">Insights 
+				(2 accounts, the additional insight modules)</span> tier for free!
 			</p>
 			<div class="container">
 				<div class="row">
-					<div class="input-field col s12">
-                        <input type="text" class="validate">
-                        <label for="disabled">Email 1</label>
-                    </div>
-                    <div class="input-field col s12">
-                        <input type="text" class="validate">
-                        <label for="disabled">Email 2</label>
-                    </div>
-                    <div class="input-field col s12">
-                        <input type="text" class="validate">
-                        <label for="disabled">Email 3</label>
-                    </div>
-                    <div class="input-field col s12">
-                        <input type="text" class="validate">
-                        <label for="disabled">Email 4</label>
-                    </div>
-                    <div class="input-field col s12">
-                        <input type="text" class="validate">
-                        <label for="disabled">Email 5</label>
-                    </div>
+					<form id="referalForm">
+						<div class="input-field col s12">
+                        <input name='email1' type="email" class="validate">
+                        <label for="email1">Email 1</label>
+	                    </div>
+	                    <div class="input-field col s12">
+	                        <input name='email2' type="email" class="validate">
+	                        <label for="email2">Email 2</label>
+	                    </div>
+	                    <div class="input-field col s12">
+	                        <input name='email3' type="email" class="validate">
+	                        <label for="email3">Email 3</label>
+	                    </div>
+					</form>
 				</div>
 			</div>
 		</div>
 		<div class="modal-footer">
-			<a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Submit</a>
-			<a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">No Thanks!</a>
+			<button id="submitReferal" class="modal-action modal-close waves-effect waves-green btn-flat">Submit</button>
+			<button  class="modal-action modal-close waves-effect waves-green btn-flat">No Thanks!</button>
 		</div>
 	</div>
   	
@@ -210,7 +205,64 @@
 
 	$('#submitEmail').on('submit', function(e){
 		e.preventDefault();
-		$('#modal1').openModal();
+
+		var email = $('#email').val();
+		if(!email){
+			return;
+		}
+
+		var data = {
+			email : email,
+			csrfmiddlewaretoken: '{{ csrf_token }}'
+		}
+		$.ajax({
+			url: '{% url "email-list" %}',
+			type: 'POST',
+			data: data,
+		})
+		.done(function() {
+			console.log("success");
+		})
+		.fail(function(e) {
+			console.log('error');
+			console.log(e);
+		})
+		.always(function(){
+			$('#modal1').openModal();
+		})
+	});
+
+	$('#submitReferal').click(function(e){
+		e.preventDefault();
+		var data = $('#referalForm :input').serializeArray();
+		data.forEach(function (object) {
+			var email = object.value;
+
+			if(!email){
+				return true;
+			}
+
+			var data = {
+				email : email,
+				csrfmiddlewaretoken: '{{ csrf_token }}',
+				refree: $('#email').val()
+			}
+			$.ajax({
+				url: '{% url "referal-list" %}',
+				type: 'POST',
+				data: data,
+			})
+			.done(function() {
+				console.log("success");
+			})
+			.fail(function() {
+				console.log("error");
+			})
+			.always(function() {
+				console.log("complete");
+			});
+			
+		});
 	});
 
  	var hidden = false;
