ssl to high charts

--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -11,9 +11,9 @@
   	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="{% static 'bower_components/mdi/css/materialdesignicons.min.css' %}" media="all" rel="stylesheet" type="text/css" />
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-	<script src="http://code.highcharts.com/highcharts.js"></script>
-	<script src="http://code.highcharts.com/highcharts-more.js"></script>
-   	<script src="http://code.highcharts.com/modules/solid-gauge.js"></script>
+	<script src="https://code.highcharts.com/highcharts.js"></script>
+	<script src="https://code.highcharts.com/highcharts-more.js"></script>
+   	<script src="https://code.highcharts.com/modules/solid-gauge.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 
 </head>
