--- a/templates/masterIndex.html
+++ b/templates/masterIndex.html
@@ -7,6 +7,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>{% block title %}{% endblock %}</title>
+	
+	<link rel="shortcut icon" type="image/png" href="{% static 'media/logoSymbol.jpg' %}"/>
 
 	{% block css %}{% endblock %}
 	
