--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -31,10 +31,11 @@
 			<ul style="margin-left : 40px" id="nav-mobile" class="left hide-on-med-and-down">
 				<li><a href="collapsible.html">Viewing Options</a></li>
 				<li><a href="collapsible.html">Edit Report</a></li>
+				<li><a href="{% url 'linkAccount' %}">Link Accounts</a></li>
 			</ul>
 			<ul style="margin-right : 40px" id="nav-mobile" class="right hide-on-med-and-down">
 				<li><a href="collapsible.html">Accounts</a></li>
-				<li><a href="collapsible.html">Logout</a></li>
+				<li><a href="{% url 'logout' %}">Logout</a></li>
 			</ul>
 		</div>
   	</nav>
