changed a view things in view

--- a/templates/dashboard/registerView.html
+++ b/templates/dashboard/registerView.html
@@ -1,7 +1,7 @@
 {% extends 'masterIndex.html' %}
 {% load staticfiles %}
 
-{% block title %}Login{% endblock %}
+{% block title %}Register{% endblock %}
 
 
 {% block css %}
