--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -1,44 +1,26 @@
 {% extends 'masterIndex.html' %}
 {% load staticfiles %}
 
-{% block title %}Dashboard{% endblock %}
+{% block title %}Vestivise – Simple Investment Reporting{% endblock %}
 
 {% block css %}
 	<link href='https://fonts.googleapis.com/css?family=Raleway:400,700,800,900' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="{% static 'build/css/dashboard.css' %}">
-
 	<!-- Compiled and minified CSS -->
-  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
-  	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link href="{% static 'bower_components/mdi/css/materialdesignicons.min.css' %}" media="all" rel="stylesheet" type="text/css" />
+	<link href="{% static 'bower_components/SpinKit/css/spinkit.css' %}" rel="stylesheet">
+
 {% endblock %}
 
 {% block headJS %}
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 	<script src="https://code.highcharts.com/highcharts.js"></script>
 	<script src="https://code.highcharts.com/highcharts-more.js"></script>
    	<script src="https://code.highcharts.com/modules/solid-gauge.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 
 {% endblock %}
 
 {% block content  %}
 
-	<nav>
-	    <div class="nav-wrapper vestBar">
-      		<a href="#" class="brand-logo center"><img height="100%" width="230" src="{% static 'media/logo.jpg' %}" alt=""></a>
-			<ul style="margin-left : 40px" id="nav-mobile" class="left hide-on-med-and-down">
-				<li><a href="collapsible.html">Viewing Options</a></li>
-				<li><a href="collapsible.html">Edit Report</a></li>
-				<li><a href="{% url 'linkAccount' %}">Link Accounts</a></li>
-			</ul>
-			<ul style="margin-right : 40px" id="nav-mobile" class="right hide-on-med-and-down">
-				<li><a href="collapsible.html">Accounts</a></li>
-				<li><a href="{% url 'logout' %}">Logout</a></li>
-			</ul>
-		</div>
-  	</nav>
+	{% include 'dashboard/appNav.html' %}
 
   	<div id="app"></div>
 	
