--- a/templates/clientDashboard/clientDashboard.html
+++ b/templates/clientDashboard/clientDashboard.html
@@ -4,12 +4,16 @@
 {% block title %}Dashboard{% endblock %}
 
 {% block css %}
-        <link rel="stylesheet" href="{% static 'build/css/clientDashboard/clientDashboard.css' %}">
-        <link rel="stylesheet" href="{% static 'src/node_modules/nprogress/nprogress.css' %}">
+    <link type="text/css" rel="stylesheet" href="{% static 'build/css/clientDashboard/clientDashboard.css' %}">
+    <link type="text/css" rel="stylesheet" href="{% static 'build/css/clientDashboard/moduleBlocks.css' %}">
+
+    <link type="text/css" rel="stylesheet" href="{% static 'src/node_modules/nprogress/nprogress.css' %}">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
 
 {% endblock %}
 
 {% block headJS %}
+
 {% endblock %}
 
 {% block content  %}
