dashboard almost done

--- a/templates/clientDashboard/demoClientDashboard.html
+++ b/templates/clientDashboard/demoClientDashboard.html
@@ -25,7 +25,7 @@
 {% block footerJS %}
 
     <script>
-        var isDemo = false;
+        var isDemo = true;
     </script>
 
     <script src="{% static 'build/js/clientDashboardApp.min.js' %}"></script>
