algos, completed registration demo, and working on hr dashboard

--- a/templates/clientDashboard/demoClientDashboard.html
+++ b/templates/clientDashboard/demoClientDashboard.html
@@ -8,7 +8,7 @@
     <link type="text/css" rel="stylesheet" href="{% static 'build/css/clientDashboard/moduleBlocks.css' %}">
 
     <link type="text/css" rel="stylesheet" href="{% static 'src/node_modules/nprogress/nprogress.css' %}">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+    <link href="{% static 'bower_components/SpinKit/css/spinkit.css' %}" rel="stylesheet">
 
 {% endblock %}
 
