media file fixes

--- a/templates/masterIndex.html
+++ b/templates/masterIndex.html
@@ -34,6 +34,12 @@
 
 	</script>
 
+    <script>
+        var config = {};
+
+        window.config = config;
+    </script>
+
 	{% block headJS %}{% endblock %}
 	
 
