--- a/templates/masterIndex.html
+++ b/templates/masterIndex.html
@@ -9,12 +9,13 @@
 
     <title>{% block title %}{% endblock %}</title>
 	
-	<link rel="shortcut icon" type="image/png" href="{% static 'media/logoSymbol.jpg' %}"/>
+	<link rel="shortcut icon" type="image/png" href="{% static '/media/logoSymbol.jpg' %}"/>
 	<link rel="stylesheet" href="{% static 'build/css/master.css' %}"/>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nprogress/0.2.0/nprogress.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="{% static 'bower_components/SpinKit/css/spinkit.css' %}" rel="stylesheet">
 
 	{% block css %}{% endblock %}
 
