--- a/templates/hrDashboard/hrDashboard.html
+++ b/templates/hrDashboard/hrDashboard.html
@@ -5,12 +5,12 @@
 
 {% block css %}
         <link rel="stylesheet" href="{% static 'build/css/hrDashboard/hrDashboard.css' %}">
-        <link rel="stylesheet" href="{% static 'bower_components/dropify/dist/css/dropify.css' %}">
+        <link rel="stylesheet" href="{% static 'bower_components/dropify/dist/css/dropify.min.css' %}">
 
 {% endblock %}
 
 {% block headJS %}
-    <script src="{% static 'bower_components/dropify/dist/js/dropify.js' %}"></script>
+    <script src="{% static 'bower_components/dropify/dist/js/dropify.min.js' %}"></script>
 {% endblock %}
 
 {% block content  %}
