--- a/templates/clientDashboard/clientDashboard.html
+++ b/templates/clientDashboard/clientDashboard.html
@@ -8,7 +8,7 @@
     <link type="text/css" rel="stylesheet" href="{% static 'build/css/clientDashboard/slickStyle.css' %}">
 
     <link type="text/css" rel="stylesheet" href="{% static 'build/css/clientDashboard/moduleBlocks.css' %}">
-    <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
 {% endblock %}
 
 {% block headJS %}
@@ -22,8 +22,8 @@
 {% endblock %}
 
 {% block footerJS %}
-    <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
     <script>
         var isDemo = "{{ isDemo }}" === 'True';
     </script>
