--- a/templates/clientDashboard/clientDashboard.html
+++ b/templates/clientDashboard/clientDashboard.html
@@ -8,6 +8,8 @@
     <link type="text/css" rel="stylesheet" href="{% static 'build/css/clientDashboard/slickStyle.css' %}">
 
     <link type="text/css" rel="stylesheet" href="{% static 'build/css/clientDashboard/moduleBlocks.css' %}">
+    <link type="text/css" rel="stylesheet" href="{% static 'bower_components/hover/css/hover-min.css' %}">
+
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
 {% endblock %}
 
