--- a/templates/masterIndex.html
+++ b/templates/masterIndex.html
@@ -12,7 +12,7 @@
 	<link rel="shortcut icon" type="image/png" href="{% static '/media/logoSymbol.jpg' %}"/>
 	<link rel="stylesheet" href="{% static 'build/css/master.css' %}"/>
 
-    <link href="{% static 'bower_components/tether-shepherd/dist/css/shepherd-theme-arrows-fix.css' %}" rel="stylesheet">
+    <link href="{% static 'bower_components/tether-shepherd/dist/css/shepherd-theme-arrows.css' %}" rel="stylesheet">
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nprogress/0.2.0/nprogress.min.css">
@@ -27,8 +27,8 @@
 
 	<script src="{% url 'js_reverse' %}" type="text/javascript"></script>
 
-    <script href="{% static 'bower_components/tether/dist/js/tether.min.js' %}" type="text/javascript"></script>
-    <script href="{% static 'bower_components/tether-shepherd/dist/js/shepherd.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'bower_components/tether/dist/js/tether.min.js' %}"></script>
+    <script src="{% static 'bower_components/tether-shepherd/dist/js/shepherd.min.js' %}"></script>
 
 
 	<script>
