--- a/templates/masterIndex.html
+++ b/templates/masterIndex.html
@@ -6,6 +6,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!--[if lt IE 7 ]> <html class="ie6" lang="en"> <![endif]-->
+    <!--[if IE 7 ]>    <html class="ie7" lang="en"> <![endif]-->
+    <!--[if IE 8 ]>    <html class="ie8" lang="en"> <![endif]-->
+    <!--[if IE 9 ]>    <html class="ie9" lang="en"> <![endif]-->
+    <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en"> <!--<![endif]-->
 
     <title>{% block title %}{% endblock %}</title>
 	
@@ -29,6 +34,11 @@
 
     <script src="{% static 'bower_components/tether/dist/js/tether.min.js' %}"></script>
     <script src="{% static 'bower_components/tether-shepherd/dist/js/shepherd.min.js' %}"></script>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+    <script src="{% static 'bower_components/selectivizr/selectivizr.js' %}"></script>
+    <!--[if lt IE 9]>
+        <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
+    <![endif]-->
 
 
 	<script>
