--- a/templates/masterIndex.html
+++ b/templates/masterIndex.html
@@ -61,6 +61,19 @@
         window.config = config;
     </script>
 
+    <script src="https://cdn.ravenjs.com/2.3.0/raven.min.js"></script>
+
+    {% if request.sentry.id %}
+      <script>
+      Raven.showReportDialog({
+        eventId: '{{ request.sentry.id }}',
+
+        // use the public DSN (dont include your secret!)
+        dsn: 'https://fae4de274ae9455caaf93419086e3f90@sentry.io/140820'
+      });
+      </script>
+    {% endif %}
+
 	{% block headJS %}{% endblock %}
 	
 
