--- a/templates/clientDashboard/clientDashboard.html
+++ b/templates/clientDashboard/clientDashboard.html
@@ -66,6 +66,8 @@
     <script>
         var isDemo = "{{ isDemo }}" === 'True';
     </script>
+    <script type="text/javascript" src="{% static 'bower_components/df-visible/jquery.visible.min.js' %}"></script>
+
     <script src="{% static 'build/js/clientDashboardApp.min.js' %}"></script>
 
 {% endblock %}
