all minor changes

--- a/templates/masterIndex.html
+++ b/templates/masterIndex.html
@@ -41,7 +41,7 @@
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <script src="{% static 'bower_components/selectivizr/selectivizr.js' %}"></script>
     <!--[if lt IE 9]>
-        <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
+        <script src="{% static 'bower_components/html5shiv/dist/html5shiv.js' %}"></script>
     <![endif]-->
 
 
