Facebook graph updates

--- a/templates/clientDashboard/clientDashboard.html
+++ b/templates/clientDashboard/clientDashboard.html
@@ -8,7 +8,7 @@
     {% if isDemo %}
 
         <meta property="og:title" content="Vestivise Demo: Investment Dashboard. Made So Simple."/>
-        <meta property="og:image" content="https://www.vestivise.com/blog/wp-content/uploads/2017/02/rsz_wallpaper_full.jpg"/>
+        <meta property="og:image" content="https://www.vestivise.com/blog/wp-content/uploads/2017/04/Wallpaper-Full-Trademark.png"/>
         <meta property="og:site_name" content="app.vestivise.com/demo"/>
         <meta property="og:description" content="Explore the Investment Dashboard and sign up for free today!"/>
 
