--- a/templates/clientDashboard/registration.html
+++ b/templates/clientDashboard/registration.html
@@ -7,7 +7,7 @@
 
 
     <meta property="og:title" content="Vestivise Sign Up: Investment Dashboard. Made So Simple."/>
-    <meta property="og:image" content="https://www.vestivise.com/blog/wp-content/uploads/2017/02/rsz_wallpaper_full.jpg"/>
+    <meta property="og:image" content="https://www.vestivise.com/blog/wp-content/uploads/2017/04/Wallpaper-Full-Trademark.png"/>
     <meta property="og:site_name" content="app.vestivise.com/register"/>
     <meta property="og:description" content="Sign up for free today to understand your investments!"/>
 
